[gd_scene load_steps=2 format=3 uid="uid://b8tv9k2w7x4pm"]

[ext_resource type="Script" path="res://scripts/ui/enemy_display.gd" id="1_enemy_display"]

[node name="EnemyDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 180.0
mouse_filter = 0
script = ExtResource("1_enemy_display")

[node name="SpriteContainer" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 105.0
offset_bottom = 125.0
grow_horizontal = 2
text = "Enemy"
horizontal_alignment = 1

[node name="HealthContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 127.0
offset_right = 190.0
offset_bottom = 167.0

[node name="HPBar" type="ProgressBar" parent="HealthContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HPText" type="Label" parent="HealthContainer"]
layout_mode = 2
text = "100 / 100"
horizontal_alignment = 1

[node name="BlockIndicator" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 169.0
offset_right = 190.0
offset_bottom = 184.0
text = "Block: 0"
horizontal_alignment = 1
visible = false

[node name="TypeBadge" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_right = -5.0
offset_top = 5.0
offset_bottom = 25.0
grow_horizontal = 0
text = "BOSS"
horizontal_alignment = 1
visible = false
